# win_acapture_rs

./: Cargo.toml
examples/event_handling/: main.rs
examples/loopback_capture/: main.rs
src/: activation_params.rs  audio_capture.rs  audio_client.rs  audio_stream.rs  capture_stream.rs  com.rs  event_args.rs  lib.rs  manager.rs  notifications.rs  processes.rs  sample_format.rs  session_notification.rs  stream_instant.rs
