[package]
name = "win_acapture_rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.59.0", features = ["Win32_Media_Audio", "Win32_Media_Multimedia", "Win32_Media_KernelStreaming", "Win32_Foundation", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Com", "Win32_Devices", "Win32_Devices_Properties", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_Security", "Win32_System_Threading", "Win32_Storage_FileSystem"] }
windows-core = { version = "0.59.0" }
thiserror = "2.0.11"
log = "0.4.25"